fix icon alignement for copyable url

--- a/assets/css/usage.css
+++ b/assets/css/usage.css
@@ -18,4 +18,5 @@
 #calSubscriptionURLWrapper {
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
